# pro-football-reference-web-scraper

./: .bumpversion.cfg  .gitattributes  .gitignore  CONTRIBUTING.html  CONTRIBUTING.md  MANIFEST.in  Makefile  README.html  README.md  genindex.html  get_player_game_log.html  get_team_game_log.html  index.html  objects.inv  player_game_log.py  player_splits.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  team_splits.html
.github/workflows/: build.yml
_sources/: README.md.txt  index.md.txt  index.rst.txt  team_splits.md.txt
_sources/docs/source/: pro_football_reference_web_scraper.rst.txt
_sources/source/: pro_football_reference_web_scraper.rst.txt
docs/: README.md  conf.py  get_player_game_log.md  get_team_game_log.md  index.md  player_splits.md  requirements.txt
docs/source/: modules.html  modules.rst  pro_football_reference_web_scraper.html
pro_football_reference_web_scraper/: __init__.py  player_game_log.py  player_splits.py  team_game_log.py  team_splits.py
source/: conftest.html  modules.html  pro_football_reference_web_scraper.html  setup.html
src/: player_game_log.py  team_game_log.py
tests/: test_player_game_log.py  test_player_game_log_integration.py  test_player_game_log_unit.py  test_player_splits_integration.py  test_player_splits_unit.py  test_team_game_log_integration.py  test_team_game_log_unit.py  test_team_splits_integration.py  test_team_splits_unit.py
tests/integration/: test_player_game_log.py  test_team_game_log.py
tests/unit/: test_player_game_log.py  test_team_game_log.py
